patch_verified_entry causes problems, use nmethod entry barriers instead

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 26
    • Affects Version/s: 25
    • Component/s: hotspot
    • b04

      See JDK-8357017 and JDK-8258229 for examples of problems caused by NativeJump::patch_verified_entry().

      Recent JDK releases always use nmethod entry barriers, and already have support for redirecting to SharedRuntime::get_handle_wrong_method_stub(). We can replace verified entry point patching with a permanently armed entry barrier.

            Assignee:
            Dean Long
            Reporter:
            Dean Long
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: